--- a/home/dl.cfg
+++ b/home/dl.cfg
@@ -1,3 +1,3 @@
 [AWS_CREDS]
-AWS_ACCESS_KEY_ID=AKIA5BL5V7XRDIJUWHNW
-AWS_SECRET_ACCESS_KEY=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
+AWS_ACCESS_KEY=
+AWS_SECRET_ACCESS_KEY=
